--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -30,7 +30,7 @@ The files below are used in this chapter. Right click to save each file.
 |-------------------|
 |[survey_codebook.csv](survey_codebook.csv)   |
 |[items_qualtrics_format.txt](items_qualtrics_format.txt)|
-|[data_qualtrics_raw.csv](data_qualtrics_raw.csv)   |
+|[data_qualtrics.csv](data_qualtrics.csv)   |
 |[script_qualtrics.R](script_qualtrics.R) |
 
 The following CRAN packages must be installed:
@@ -420,13 +420,32 @@ To load the data in R follow the steps below
 
 4. You may be tempted to load the data using the usual read_csv() process. This will be problematic due to the way the data is formatted in the .csv file. (see image below.)
 
+```{r, echo = FALSE, out.width="100%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_raw_data.png")
+```
+
+5. You can see by inspecting the data screenshot above that a variety of  columns have been included before our first data column (yearofbirth) which appears on the far right of screenshot. Also note that there are three header rows at the top of the file before the data which starts on row 4. So there are few problems that need to be addressed when we load data from Qualtrics.
+
+* Obtain the names from the first header row but read the data from row 4 on.
+
+* Remove some, or all, of the additional columns on the side of data set added by Qualtrics
+
+* Ensure our variable names follow the tidyverse [style guide](https://style.tidyverse.org)
+
+* Ensure we DO NOT modify the data_qualtrics.csv file in Excel or other program. That would destroy the reproducibility of our work in the very first step.
 
 
 ### Convert to analytic data
 
+The issues described above are all solved with the script below. 
 
-
-Read the file in with the right columns names - excluding unwanted rows.
+Additionally, in the script we also:
+* Convert categorical variable to factors
+* Screen both numeric variables and factors for impossible values
+* Convert Likert items from labels (e.g., "Strongly Disagree") to numbers (e.g., 1)
+* Flip reverse-key (i.e., reverse worded items) so they are scored in the right direction
+* Combine items (e.g., aff_com1_likert7) for the same measure into a single scale score (e.g., affective_commitment)
+* Remove item columns (e.g., aff_com1_likert7) after that have been combined into the scale score while retaining the scale score column column (e.g., affective_commitment)
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -451,7 +470,7 @@ col_names <- names(read_csv(survey_file,
                             n_max = 0,
                             show_col_types = FALSE))
 
-# skip the first 3 rows than read in the data and use names from above
+# skip the first 3 rows than read in the data and use names from above step
 raw_data <- read_csv(survey_file,
                   col_names = col_names, 
                   skip = 3,
@@ -499,7 +518,8 @@ analytic_data_survey <- raw_data
 
 ```
 
-Remove empty row and columns from your data using the remove_empty_cols() and remove_empty_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions. 
+
+In the command below, we ensure our column names follow the tidyverse [style guide](https://style.tidyverse.org) by using the clean_names() command from the janitor package. Addditionaly, we remove empty row and columns from the data using the remove_empty_cols() and remove_empty_rows(), respectively.  
 
 ```{r, results = "hide"}
 # Initial cleaning
@@ -777,6 +797,8 @@ analytic_data_survey <- analytic_data_survey %>%
 For each person, scale scores involve averaging scores from several items to create an overall score. The first step in the creation of scales is correcting the values of any reverse-keyed items.
 
 #### Reverse-key items
+
+A commplete discussion of the rationale for flipping reverse-key (i.e., reverse worded) items is provide the previous chapter in the [Scale Scores](https://dstanley4.github.io/psyc6060bookdown/an-emphasis-on-workflow.html#scale-scores) section. We use that logic in the script below.
 
 
 ```{r,echo=TRUE,eval=TRUE}
