--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -5,7 +5,7 @@ library(tidyverse)
 ```
 ## Overview
 
-There are two tasks covered in this section: **1)** importing surveys into Qualtrics and **2)** moving data from Qualtrics to R. An overview of each process is below.
+There are two tasks covered in this chapter: **1)** importing surveys into Qualtrics and **2)** moving data from Qualtrics to R. An overview of each process is below.
 
 **1. Importing items into Qualtrics**
 
@@ -18,7 +18,7 @@ There are two tasks covered in this section: **1)** importing surveys into Qualt
 
 * Export the raw data from Qualtrics with maximal information in the data file
 * Load the raw data into R
-* Convert the raw data to analytic data. This conversion includes: assigning values to response options (e.g., "Strongly Disagree" becomes the value 1), flipping response for reverse-worded (i.e., reverse-key) items, and creating scale scores.
+* Convert the raw data to analytic data. This conversion includes: assigning values to response options (e.g., "Strongly Disagree" to a numeric value), flipping response for reverse-worded (i.e., reverse-keyed) items, and creating scale scores.
 
 The overall steps are quite simple and I walk you through each step in detail below.
 
@@ -62,13 +62,13 @@ There are two approaches to entering survey items into Qualtrics.
 
 * Enter the items one at a time using the Qualtrics web interface.
 
-* Create a text file in the Qualtrics [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) and import the itme. Be warned though a bit of tweaking is often still needed using the web interface.
+* Create a text file in the Qualtrics [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) and import the items. Be warned though a bit of tweaking is often still needed using the web interface.
 
 Here we focus only on the second approach to entering items into Qualtrics.
 
 ### Create survey codebook
 
-The easy way to create items in the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) is to use the qualtricsMaker package. With this package you create a spreadsheet with the items and then convert that spreadsheet to the Advanced Text Format. Consider a scneario where we want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. We being by creating a survey codebook spreadsheet in Excel (or similar program). The spreadsheet should have the columns with the names: block, item_name, item_text, type, response_options. The completed file (  [survey_codebook.csv](survey_codebook.csv)) is illustrated below. Although you can see the information that should be in each column based of the figure I provide a detailed information of what should be placed in each column. Remember to work from the guiding principle that one row is use for one item/question.
+The easy way to create items in the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) is to use the qualtricsMaker package. With this package you create a spreadsheet with the items and then convert that spreadsheet to the Advanced Text Format. Consider a scenario where we want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. We being by creating a survey codebook spreadsheet in Excel (or similar program). The spreadsheet should have the columns with the names: block, item_name, item_text, type, response_options. The completed file (  [survey_codebook.csv](survey_codebook.csv)) is illustrated below.  I provide a detailed description of what should be placed in each column after the figure. Remember to work from the guiding principle that one row is use for one item/question.
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_items.png")
@@ -104,7 +104,7 @@ The item_text column contains the text for each item. Note that if you use comma
 
 #### response_options column
 
-The Likert items for the different blocks use different response options. The commitment items use a 7-point response option and the job satisfaction items use a 5-point response option.
+The Likert items for the different blocks use different response options. The commitment items use a 7-point response option whereas the job satisfaction items use a 5-point response option.
 
 ##### Year of birth
 
@@ -281,7 +281,7 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_export_filename.png")
 
 ### Import the items
 
-In the previous step you created items_qualtrics_format.txt. This file is illustrated below - well the middle of the file is illustrated below. You can think of the file created by the survey_maker command above as a starting point. You could open up this file in a text editor and make further modifications or additions based on learning the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/). For example, you might not want the matrix items to be in their own block. If so, you would simply remove the block text [[Block:Commitment]] from the text file prior to following the directions below. If you're a Mac user you might find the text editor [BBEdit](https://www.barebones.com/products/bbedit/download.html) for helpful for this purpose -- the free version is sufficient. After you download BBEdit you have access to all of its features. Once the free trial ends - the core features are still free. You only need to purchase it if you want the advanced features (and you won't need the advanced features).
+In the previous step you created items_qualtrics_format.txt. This file is illustrated below - well the middle of the file is illustrated below. You can think of the file created by the survey_maker command above as a starting point. You could open up this file in a text editor and make further modifications or additions based on learning the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/). For example, you might not want the matrix items to be in their own block. If so, you would simply remove the block text [[Block:Commitment]] from the text file prior to following the directions below. If you're a Mac user you might find the text editor [BBEdit](https://www.barebones.com/products/bbedit/download.html) helpful for this purpose -- the free version is sufficient. After you download BBEdit you have access to all of its features. Once the free trial ends - the core features are still free. You only need to purchase it if you want the advanced features (and you won't need the advanced features).
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_advanced_text.png")
@@ -352,7 +352,7 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_select.png")
 knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_menu.png")
 ```
 
-3. Click the Export Question Tags check box. You will see the default names for the items (instead of the ones you indicated in the codebook). Clock the Close button in the lower right when you're done.
+3. Click the Export Question Tags check box. You will see the default names for the items (instead of the ones you indicated in the codebook). Click the Close button in the lower right when you're done.
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_defaults.png")
@@ -364,12 +364,7 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_defaults.png")
 knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_defaults_fixed.png")
 ```
 
-5. Preview your final survey.
-
-```{r, echo=FALSE, out.width="60%"}
-knitr::include_graphics("ch_qualtrics/images/screenshot_iphone.png")
-```
-
+5. Collect your data!
 
 ## Qualtrics data to R
 
@@ -384,7 +379,7 @@ Following data collection, you can obtain your data from Qualtrics. As of 2021, 
 knitr::include_graphics("ch_qualtrics/images/screenshot_data.png")
 ```
 
-#### Click the Export & Import button.
+#### Click the Export & Import button
 
 Then click the **Export Data...** option.
 
@@ -405,7 +400,7 @@ The file will appear in your downloads directory.
 
 * It will likely be a zipped filed. Unzip the file before proceeding. On a Mac, you can just double click the file to do so.
 
-* Rename the file to data_survey.csv
+* Rename the file to data_qualtrics.csv
 
 
 ### Load data in R
@@ -414,7 +409,7 @@ To load the data in R follow the steps below
 
 1. Create a new folder called "survey_data"
 
-2. Drag the data_survey.csv file to the survey_data folder.
+2. Drag the data_qualtrics.csv file to the survey_data folder.
 
 3. Use the steps described previously on this page, use RStudio to create project for this data.
 
@@ -428,7 +423,7 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_raw_data.png")
 
 * Obtain the names from the first header row but read the data from row 4 on.
 
-* Remove some, or all, of the additional columns on the side of data set added by Qualtrics
+* Remove some, or all, of the additional columns on the left side of data set added by Qualtrics
 
 * Ensure our variable names follow the tidyverse [style guide](https://style.tidyverse.org)
 
@@ -440,12 +435,18 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_raw_data.png")
 The issues described above are all solved with the script below. 
 
 Additionally, in the script we also:
+
 * Convert categorical variable to factors
+
 * Screen both numeric variables and factors for impossible values
 * Convert Likert items from labels (e.g., "Strongly Disagree") to numbers (e.g., 1)
+
 * Flip reverse-key (i.e., reverse worded items) so they are scored in the right direction
+
 * Combine items (e.g., aff_com1_likert7) for the same measure into a single scale score (e.g., affective_commitment)
+
 * Remove item columns (e.g., aff_com1_likert7) after that have been combined into the scale score while retaining the scale score column column (e.g., affective_commitment)
+
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -470,11 +471,12 @@ col_names <- names(read_csv(survey_file,
                             n_max = 0,
                             show_col_types = FALSE))
 
-# skip the first 3 rows than read in the data and use names from above step
+# skip the first 3 rows than read in the data and use names from above
 raw_data <- read_csv(survey_file,
                   col_names = col_names, 
                   skip = 3,
                   show_col_types = FALSE)
+
 ```
 
 
@@ -483,29 +485,29 @@ Remove the Qualtrics columns you probably don't want:
 ```{r}
 # list of Qualtrics columns you probably don't want
 cols_to_maybe_remove <- c("StartDate",
-                   "EndDate",
-                   "Status",
-                   "IPAddress",
-                   "Progress",
-                   "Duration (in seconds)",
-                   "Finished",
-                   "RecordedDate",
-                   "ResponseId",
-                   "RecipientLastName",
-                   "RecipientFirstName",
-                   "RecipientEmail",
-                   "ExternalReference",
-                   "LocationLatitude",
-                   "LocationLongitude",
-                   "DistributionChannel",
-                   "UserLanguage")
+                          "EndDate",
+                          "Status",
+                          "IPAddress",
+                          "Progress",
+                          "Duration (in seconds)",
+                          "Finished",
+                          "RecordedDate",
+                          "ResponseId",
+                          "RecipientLastName",
+                          "RecipientFirstName",
+                          "RecipientEmail",
+                          "ExternalReference",
+                          "LocationLatitude",
+                          "LocationLongitude",
+                          "DistributionChannel",
+                          "UserLanguage")
 
 # check to see overlap with actual column names in data file
 # put names to remove (that are present) into cols_to_remove
 cols_to_remove_id <- col_names %in% cols_to_maybe_remove
 cols_to_remove <- col_names[cols_to_remove_id]
 
-# remove the unwanted qualtrics columns
+# remove the unwanted Qualtrics columns
 raw_data <- raw_data %>% 
   select(!all_of(cols_to_remove))
 ```
@@ -523,6 +525,8 @@ In the command below, we ensure our column names follow the tidyverse [style gui
 
 ```{r, results = "hide"}
 # Initial cleaning
+## Convert column names to tidyverse style guide
+## Remove empty rows and columns
 analytic_data_survey <- analytic_data_survey %>%
   remove_empty("rows") %>%
   remove_empty("cols") %>%
@@ -548,6 +552,8 @@ glimpse(analytic_data_survey)
 There is only one variable that we will convert to a factor and that's the sex variable. We convert it to a factor with the command below.
 
 ```{r}
+# Convert variables to factors as needed
+## Convert sex to factor
 analytic_data_survey <- analytic_data_survey %>%
   mutate(sex = as_factor(sex))
 ```
@@ -558,16 +564,17 @@ analytic_data_survey <- analytic_data_survey %>%
 In many analyses we will need a column with a unique identification number that is a factor. We don't see one in this data set so we create it with the name participant_id.
 
 ```{r}
-# get the number of rows in the data set
+## Participant identification to factor
+## Participant identification column must be created first
+## get the number of rows in the data set
 N <- dim(analytic_data_survey)[1] 
 
-# create set of factor levels
+## create set of factor levels
 participant_id_levels <- factor(seq(1, N))
 
-# put the factor levels into a column called participant_id
+## put the factor levels into a column called participant_id
 analytic_data_survey <- analytic_data_survey %>%
   mutate(participant_id = participant_id_levels)
-  
 ```
 
 You can ensure all of these columns are now factors using the glimpse() command. 
@@ -584,6 +591,8 @@ analytic_data_survey %>%
 Inspect the levels of each factor carefully. Make sure the factor levels of each variable are correct. Examine spelling and look for additional unwanted levels. For example, you wouldn't want to have the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factors in your data for erroneous factor levels. The code below displays the factor levels for sex:
 
 ```{r}
+# Screen factors
+## screen
 analytic_data_survey %>%
   select(sex) %>%
   summary()
@@ -594,6 +603,7 @@ You can see in the above output there are three levels for sex in this data set:
 Notice the order of the factor levels: female, male, and intersex. This will be the order they appear in graphs and tables. We might want another order. If we did want another order, we could use the code below to establish the custom order for graphs and tables: female, intersex, male.  Of course, you can use any order you want that makes sense for the context and your research question.
 
 ```{r}
+## change to desired order
 analytic_data_survey <- analytic_data_survey %>%
   mutate(sex = fct_relevel(sex,
                            "female",
@@ -606,6 +616,7 @@ analytic_data_survey <- analytic_data_survey %>%
 For numeric variables, it's important to find and remove impossible values. We only have yearofbirth as a numeric column - so we can easily check for nonsense values with the code below:
 
 ```{r, eval = FALSE}
+# Screen numeric variables
 analytic_data_survey %>%
   select(yearofbirth) %>%
   skim()
@@ -654,7 +665,8 @@ To convert a column from txt to fct we need know the exact labels used in that c
 
 
 ```{r}
-# Check levels for a likert7 item
+# Convert Commitment items to numeric  values
+## Check levels for a likert7 item
 analytic_data_survey %>%
   pull(aff_com1_likert7) %>%
   unique()
@@ -663,7 +675,7 @@ analytic_data_survey %>%
 Now the we know the labels used in that column (and all the columns that end in likert7) we create an ordered version of those labels with the code below. I copied and pasted the text (e.g., "Strongly Disagree") from the above output to avoid mistakes.
 
 ```{r}
-# write code to create a factor
+## write code to create ordered factor labels/levels
 likert7_factor <- c("Strongly Disagree",
                     "Moderately Disagree",
                     "Slightly Disagree",
@@ -677,6 +689,7 @@ likert7_factor <- c("Strongly Disagree",
 Now turn each column of text (i.e., type chr) into a factor using level labels we created above we use the code below. 
 
 ```{r}
+## assign factor levels
 analytic_data_survey <- analytic_data_survey %>%
   mutate(across(.cols = contains("likert7"), 
                 .fns = ~ factor(.x, levels = likert7_factor)))
@@ -704,6 +717,7 @@ analytic_data_survey %>%
 The second step in our conversion process is converting each column from a factor to the numeric value associated with the factor level (i.e. Strongly Disagree becomes 1). We do so with the code below:
 
 ```{r}
+## covert factor levels to numeric values
 analytic_data_survey <- analytic_data_survey %>%
   mutate(across(.cols = contains("likert7"), 
                 .fns = as.numeric))
@@ -728,12 +742,13 @@ analytic_data_survey %>%
 Side note: We did a lot of explaining as we went through the steps above. But it's not as long as it seems. Some of the steps can even be combined. See the concise version of the code we used repeated below:
 
 ```{r, eval = FALSE}
-# Check levels for a likert7 item
+# Convert Commitment items to numeric  values
+## Check levels for a likert7 item
 analytic_data_survey %>%
   pull(aff_com1_likert7) %>%
   unique()
 
-# write code to create a factor
+## write code to create ordered factor labels/levels
 likert7_factor <- c("Strongly Disagree",
                     "Moderately Disagree",
                     "Slightly Disagree",
@@ -742,12 +757,13 @@ likert7_factor <- c("Strongly Disagree",
                     "Moderately Agree",
                     "Strongly Agree")
 
+
+## assign factor levels and then covert to numeric
 analytic_data_survey <- analytic_data_survey %>%
   mutate(across(.cols = contains("likert7"), 
                 .fns = ~ factor(.x, levels = likert7_factor))) %>%
   mutate(across(.cols = contains("likert7"), 
                 .fns = as.numeric))
-
 ```
 
 
@@ -756,8 +772,8 @@ analytic_data_survey <- analytic_data_survey %>%
 We'll skip all the explanation steps for Job Satifaction and just show you the essentions. First, get the labels for the items:
 
 ```{r}
-
-# Check levels for a likert5 item
+# Convert Job Satisfaction items to numeric  values
+## Check levels for a likert5 item
 analytic_data_survey %>%
   pull(job_aff1_likert5) %>%
   unique()
@@ -766,30 +782,24 @@ analytic_data_survey %>%
 Second, create the ordered factor labels:
 
 ```{r}
-
-# write code to create a factor
+## write code to create ordered factor labels/levels
 likert5_factor <- c("Strongly Disagree",
-                     "Disagree",
-                     "Neutral",
-                     "Agree",
-                     "Strongly Agree")
+                    "Disagree",
+                    "Neutral",
+                    "Agree",
+                    "Strongly Agree")
 ```
 
 
 Third, convert the columns to a factor and then to numbers.
 
 ```{r}
-# Create numeric versions of Likert Response Options
-# First mutate command turns everything to a factor as defined above
-# Second mutate command converts factor to a numeric variable
-# Treat 5 and 7 point scale in different code blocks
+## assign factor levels and then covert to numeric
 analytic_data_survey <- analytic_data_survey %>%
   mutate(across(.cols = contains("likert5"), 
                 .fns = ~ factor(.x, levels = likert5_factor))) %>%
   mutate(across(.cols = contains("likert5"), 
                 .fns = as.numeric))
-
-
 ```
 
 ### Scale scores
@@ -802,6 +812,8 @@ A commplete discussion of the rationale for flipping reverse-key (i.e., reverse 
 
 
 ```{r,echo=TRUE,eval=TRUE}
+# Reverse key items
+## Reverse key likert7 items
 analytic_data_survey <- analytic_data_survey %>% 
   mutate(8 - across(.cols = ends_with("_likert7rev")) ) %>% 
   rename_with(.fn = str_replace,
@@ -816,28 +828,31 @@ You can see that are all keyed in the right direction now.
 glimpse(analytic_data_survey)
 ```
 
+None of the job satisfaction items were reverse-keyed.
 
 #### Creating scores
 
 **Important:** Take note of how we name the scale variables (e.g., affective_commitment) with a different prefix than the items (e..g, aff_com1_likert7). This allows us to delete the items (i.e., columns that start with aff_com) but not the final scale score (i.e., a column starts with affective_commitment). This example illustrates how carefully you need to think about your column and scale naming conventions.
 
 ```{r}
+# Create scale scores
+## mutate commands create scale scores
+## select commands with "-" remove items after scale creation
 analytic_data_survey <- analytic_data_survey %>% 
   rowwise() %>% 
   mutate(affective_commitment = mean(c_across(starts_with("aff_com")),
-                               na.rm = TRUE)) %>%
+                                     na.rm = TRUE)) %>%
   mutate(continuance_commitment = mean(c_across(starts_with("contin_com")),
-                               na.rm = TRUE)) %>%
+                                       na.rm = TRUE)) %>%
   mutate(normative_commitment = mean(c_across(starts_with("norm_com")),
-                               na.rm = TRUE)) %>%
+                                     na.rm = TRUE)) %>%
   mutate(job_satisfaction = mean(c_across(starts_with("job_aff")),
-                               na.rm = TRUE)) %>%
+                                 na.rm = TRUE)) %>%
   ungroup() %>%
   select(-starts_with("aff_com")) %>%
   select(-starts_with("contin_com")) %>%
   select(-starts_with("norm_com")) %>%
   select(-starts_with("job_aff")) 
-  
 ```
 
 We can see our data now has the self_esteem column, a job_sat column, and that all of the item-level data has been removed.
@@ -853,6 +868,7 @@ You now have two data sets analytic_data_survey and analytic_data_survey_items. 
 The complete script [script_qualtrics.R](script_qualtrics.R) for the data file [data_qualtrics.csv](data_qualtrics.csv) is presented below.
 
 ```{r, eval = FALSE}
+
 # Date: YYYY-MM-DD
 # Name: your name here
 # Example: Single occasion survey
@@ -871,35 +887,35 @@ col_names <- names(read_csv(survey_file,
 
 # skip the first 3 rows than read in the data and use names from above
 raw_data <- read_csv(survey_file,
-                  col_names = col_names, 
-                  skip = 3,
-                  show_col_types = FALSE)
+                     col_names = col_names, 
+                     skip = 3,
+                     show_col_types = FALSE)
 
 # list of Qualtrics columns you probably don't want
 cols_to_maybe_remove <- c("StartDate",
-                   "EndDate",
-                   "Status",
-                   "IPAddress",
-                   "Progress",
-                   "Duration (in seconds)",
-                   "Finished",
-                   "RecordedDate",
-                   "ResponseId",
-                   "RecipientLastName",
-                   "RecipientFirstName",
-                   "RecipientEmail",
-                   "ExternalReference",
-                   "LocationLatitude",
-                   "LocationLongitude",
-                   "DistributionChannel",
-                   "UserLanguage")
+                          "EndDate",
+                          "Status",
+                          "IPAddress",
+                          "Progress",
+                          "Duration (in seconds)",
+                          "Finished",
+                          "RecordedDate",
+                          "ResponseId",
+                          "RecipientLastName",
+                          "RecipientFirstName",
+                          "RecipientEmail",
+                          "ExternalReference",
+                          "LocationLatitude",
+                          "LocationLongitude",
+                          "DistributionChannel",
+                          "UserLanguage")
 
 # check to see overlap with actual column names in data file
 # put names to remove (that are present) into cols_to_remove
 cols_to_remove_id <- col_names %in% cols_to_maybe_remove
 cols_to_remove <- col_names[cols_to_remove_id]
 
-# remove the unwanted qualtrics columns
+# remove the unwanted Qualtrics columns
 raw_data <- raw_data %>% 
   select(!all_of(cols_to_remove))
 
@@ -907,6 +923,8 @@ raw_data <- raw_data %>%
 analytic_data_survey <- raw_data
 
 # Initial cleaning
+## Convert column names to tidyverse style guide
+## Remove empty rows and columns
 analytic_data_survey <- analytic_data_survey %>%
   remove_empty("rows") %>%
   remove_empty("cols") %>%
@@ -931,7 +949,28 @@ participant_id_levels <- factor(seq(1, N))
 ## put the factor levels into a column called participant_id
 analytic_data_survey <- analytic_data_survey %>%
   mutate(participant_id = participant_id_levels)
-  
+
+# Screen factors
+## screen
+analytic_data_survey %>%
+  select(sex) %>%
+  summary()
+
+## change to desired order
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(sex = fct_relevel(sex,
+                           "female",
+                           "intersex",
+                           "male"))
+
+
+# Screen numeric variables
+analytic_data_survey %>%
+  select(yearofbirth) %>%
+  skim()
+
+
+
 
 # Convert Commitment items to numeric  values
 ## Check levels for a likert7 item
@@ -965,10 +1004,10 @@ analytic_data_survey %>%
 
 ## write code to create ordered factor labels/levels
 likert5_factor <- c("Strongly Disagree",
-                     "Disagree",
-                     "Neutral",
-                     "Agree",
-                     "Strongly Agree")
+                    "Disagree",
+                    "Neutral",
+                    "Agree",
+                    "Strongly Agree")
 
 ## assign factor levels and then covert to numeric
 analytic_data_survey <- analytic_data_survey %>%
@@ -996,19 +1035,20 @@ analytic_data_survey <- analytic_data_survey %>%
 analytic_data_survey <- analytic_data_survey %>% 
   rowwise() %>% 
   mutate(affective_commitment = mean(c_across(starts_with("aff_com")),
-                               na.rm = TRUE)) %>%
+                                     na.rm = TRUE)) %>%
   mutate(continuance_commitment = mean(c_across(starts_with("contin_com")),
-                               na.rm = TRUE)) %>%
+                                       na.rm = TRUE)) %>%
   mutate(normative_commitment = mean(c_across(starts_with("norm_com")),
-                               na.rm = TRUE)) %>%
+                                     na.rm = TRUE)) %>%
   mutate(job_satisfaction = mean(c_across(starts_with("job_aff")),
-                               na.rm = TRUE)) %>%
+                                 na.rm = TRUE)) %>%
   ungroup() %>%
   select(-starts_with("aff_com")) %>%
   select(-starts_with("contin_com")) %>%
   select(-starts_with("norm_com")) %>%
   select(-starts_with("job_aff")) 
-  
+
 
 glimpse(analytic_data_survey)
+
 ```
