--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -447,7 +447,7 @@ Additionally, in the script we also:
 
 * Remove item columns (e.g., aff_com1_likert7) after that have been combined into the scale score while retaining the scale score column column (e.g., affective_commitment)
 
-##### Load Data
+#### Load Data
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -549,7 +549,7 @@ Following initial cleaning, we identify categorical variables as factors.
 glimpse(analytic_data_survey)
 ```
 
-#### Sex
+##### Sex
 There is only one variable that we will convert to a factor and that's the sex variable. We convert it to a factor with the command below.
 
 ```{r}
@@ -560,7 +560,7 @@ analytic_data_survey <- analytic_data_survey %>%
 ```
 
 
-#### Participant identification
+##### Participant identification
 
 In many analyses we will need a column with a unique identification number that is a factor. We don't see one in this data set so we create it with the name participant_id.
 
