--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -318,7 +318,7 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_b4.png")
 
 #### Use the Tools menu to import the items
 
-Select the Import option and then specify the filename for the Advanced Text import file with the items in it.
+Select the Import option and then specify the filename (items_qualtrics_format.txt) for the Advanced Text import file with the items in it.
 
 ```{r, echo=FALSE, out.width="50%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_b5.png")
