--- a/03-graphing.Rmd
+++ b/03-graphing.Rmd
@@ -1,6 +1,6 @@
 # Graphing
 
-A great part of learning R is learn how to use ggplot2 which is part of the tidyverse. One way to learn ggplot2 is via the [free ggplot book](https://ggplot2-book.org/index.html) - I encourage you to check it out. You might also check out this ggplot2 [cheatsheet](https://www.computerworld.com/article/2935394/my-ggplot2-cheat-sheet-search-by-task.html). As well, you might consult this [blog](https://tuowang.rbind.io/post/2021-04-25-color-in-ggplot2/) to learn more about how themes and colors are handled in ggplot2. In this chapter we merely provide a brief overview of how ggplot2 works.
+A great part of learning R is learning how to use ggplot2 which is part of the tidyverse. One way to learn ggplot2 is via the [free ggplot book](https://ggplot2-book.org/index.html) - I encourage you to check it out. You might also check out this ggplot2 [cheatsheet](https://www.computerworld.com/article/2935394/my-ggplot2-cheat-sheet-search-by-task.html). As well, you might consult this [blog](https://tuowang.rbind.io/post/2021-04-25-color-in-ggplot2/) to learn more about how themes and colors are handled in ggplot2. In this chapter we merely provide a brief overview of how ggplot2 works.
 
 ## Required
 
