--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -97,6 +97,9 @@ Scripts are valuable because if you need to run an analysis a second time you do
 
 A common problem in science is that after an article is published, the authors can't reproduce the numbers in the paper. You can read more about the important problem in a surprising article in the journal [Molecular Brain](https://molecularbrain.biomedcentral.com/articles/10.1186/s13041-020-0552-2). In this article an editor reports how a request for the data underlying articles resulted in the wrong data for 40 out of 41 papers. Long story short -- keep track of the data and scripts you use for your paper. In a later chapter, it's generally poor practice to manipulate or modify or analyze your data using any menu driven software because this approach does not provide a record of what you have done.
 
+### Cheatsheets
+As you learn R and RStudio you should be aware there are a number of [cheatsheets](https://www.rstudio.com/resources/cheatsheets/) available. There is even one for the [RStudio interface](https://github.com/rstudio/cheatsheets/raw/master/rstudio-ide.pdf).
+
 ## Writing your first script
 
 ### Create the script file
