--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -1,5 +1,17 @@
 # Handling Data with the Tidyverse
 
+A key component of doing statistics in the modern world is managing/wrangling or cleaning data to make it ready for analysis. Indeed, some estimate that those who do data science spend 80% of their time engaged in cleaning data. Although this specific percentage [may not be accurate](https://blog.ldodds.com/2020/01/31/do-data-scientists-spend-80-of-their-time-cleaning-data-turns-out-no/) it does accurately reflect the fact that data scientists do spend a substantial portion of their time preparing data for analysis. Many complain about this fact but as [Leigh Dodds](https://blog.ldodds.com/2020/01/31/do-data-scientists-spend-80-of-their-time-cleaning-data-turns-out-no/) points out "I would argue that spending time working with data. To transform, explore and understand it better is absolutely what data scientists should be doing. This is the medium they are working in."
+
+In this chapter we focus on teaching you foundational skills for data preparation. The skills taught in the this chapter large revolve around using the tidyverse packages to manage data that will eventually help with data cleaning in the [Workflow](https://dstanley4.github.io/psyc6060bookdown/an-emphasis-on-workflow.html) and [Qualtrics](https://dstanley4.github.io/psyc6060bookdown/qualtrics.html) chapters. There are some additional resources you may want to consult as you learn these tidyverse skills:
+
+* [R for Data Science book](https://r4ds.had.co.nz). This is an excellent free online book! But it does reflect an exploratory analysis mindset compared to the confirmatory mindset we typically use in Psychological science.
+
+* You may find a [cheatsheet](https://www.rstudio.com/resources/cheatsheets/) helpful. Specifically, the [Data Transformation](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf) cheatsheet. 
+
+* [tidyverse website](https://www.tidyverse.org) 
+
+
+
 ```{r, include=FALSE}
 library(tidyverse)
 ```
