--- a/19-tools.Rmd
+++ b/19-tools.Rmd
@@ -1,6 +1,27 @@
 # Research Tools
 
+## Next Steps: R Books
+
+There are many R books out there. I believe that you will find these most helpful:
+
+* [R for Data Science](https://r4ds.had.co.nz) by Wickham and Grolemund. Free.
+
+* [Hands-On Programming with R](https://rstudio-education.github.io/hopr/) by Grolemund. Free.
+
+* [Advanced R](https://adv-r.hadley.nz) by Wickham. Free.
+
+* [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
+
+
+## Next Steps: Statistics Books
+
+* [Designing Experiments and Analyzing Data: A Model Comparison Perspective, Third Edition](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
+
+* [Applied Multiple Regression/Correlation Analysis for the Behavioral Sciences](https://www.amazon.ca/Multiple-Regression-Correlation-Analysis-Behavioral/dp/0805822232) by Cohen, Cohen, West, and Aiken. This is the "go to" resource is you are conducting moderated multiple regression. A great book on regression beyond just moderation though.
+
+
 ## Writing articles
+
 
 I suggest you check out [Writing Empirical Articles: Transparency, Reproducibility, Clarity, and Memorability](https://doi.org/10.1177%2F2515245918754485) for excellent advice on writing articles (pictured below). Conversely, I suggest you AVOID "Writing the Empirical Journal Article" by Daryl Bem because this article has been described by some as a "how to guide" for p-hacking (i.e., finding the prettiest path in the garden of forking analysis paths).
 
