--- a/19-tools.Rmd
+++ b/19-tools.Rmd
@@ -1,6 +1,6 @@
 # Research Tools
 
-## Next Steps: R Books
+## Next steps: R books
 
 There are many R books out there. I believe that you will find these most helpful:
 
@@ -13,7 +13,7 @@ There are many R books out there. I believe that you will find these most helpfu
 * [Art of R Programming](https://nostarch.com/artofr.htm) by Matloff.
 
 
-## Next Steps: Statistics Books
+## Next steps: Statistics books
 
 * [Designing Experiments and Analyzing Data: A Model Comparison Perspective, Third Edition](https://www.amazon.ca/Designing-Experiments-Analyzing-Data-Perspective/dp/1138892289/ref=sr_1_1?dchild=1&qid=1629119503&refinements=p_27%3AKen+Kelley&s=books&sr=1-1&text=Ken+Kelley) by Maxwell, Delaney, and Kelley. This book has a fantastic website ([https://designingexperiments.com](https://designingexperiments.com)) with online tools and R scripts. 
 
@@ -33,7 +33,7 @@ knitr::include_graphics("images/gernsbacher.png")
 
 You can pre-register your study and upload your study materials via a free account at the [OSF](https://osf.io). 
 
-## Journal Ranking via the TOP Factor
+## Journal ranking via the TOP Factor
 
 You can see journal rankings based on the Transparency and Openness Promotion Guidelines at the [Top Factor website](https://www.topfactor.org).
 
