--- a/19-tools.Rmd
+++ b/19-tools.Rmd
@@ -55,7 +55,7 @@ Some other great resources:
 
 ### papaja
 
-You may also find the [papaja package](https://github.com/crsh/papaja) by Frederik Aust helpful. It's an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to maka an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja).
+You may also find the [papaja package](https://github.com/crsh/papaja) by Frederik Aust helpful. It's an easy way to use rmarkdown. It is a based on the rmarkdown extension called bookdown. This package is specifically designed to make it easy to use rmarkdown/bookdown to make an APA style paper. Indeed that's the basis for the odd package name: **Preparing APA Journal Articles** (papaja).
 
 I suggest you read the extensive papaja (documentation)[https://crsh.github.io/papaja_man/introduction.html]. It will be worth your while!
 
