--- a/19-tools.Rmd
+++ b/19-tools.Rmd
@@ -154,23 +154,29 @@ But how do you go about determining if a paper has been retracted? There are web
 
 What is a DOI number? All modern journal articles have a DOI (digital object identifier) number associated with them. This is a unique number that identifies the article and can be used to access the document.
 
-You can see a DOI number on a PDF:
+**You can see a DOI number on a PDF:**
 
 ```{r, echo = FALSE, out.width = "60%", cap = "DOI number on a PDF"}
 knitr::include_graphics("ch_tools/images/doi_pdf.png")
 ```
 
-Or you can see a DOI number on the website:
+**Or you can see a DOI number on the website:**
 
 ```{r, echo = FALSE, out.width = "60%", cap = "DOI number on a website"}
 knitr::include_graphics("ch_tools/images/doi_website.png")
 ```
 
+**Retraction search with DOI**
 
+You can enter the DOI up on the [search site](http://retractiondatabase.org/RetractionSearch.aspx) as illustrated below. Then click the Search button. You will get the search output. Notice the yellow box in the lower left which indicates this article has **NOT** been retracted.
+
+```{r, echo = FALSE, out.width = "60%", cap = "DOI number on a website"}
+knitr::include_graphics("ch_tools/images/doi_not_retracted.png")
+```
 
 ### retractiondatabase.org
 
-If you don't have the DOI number for an article you can search for it at [http://retractiondatabase.org](http://retractiondatabase.org). The interface is illustrated below.
+If you don't have the DOI number for an article you can search for by article title or author at [http://retractiondatabase.org](http://retractiondatabase.org/RetractionSearch.aspx) as you can see from the interface below.
 
 ```{r, echo = FALSE, out.width = "100%", cap = "DOI number on a website"}
 knitr::include_graphics("ch_tools/images/retractiondb.png")
