--- a/14-deep_sampling.Rmd
+++ b/14-deep_sampling.Rmd
@@ -6,33 +6,38 @@ output:
 
 # Deep Dive: Sampling Distributions [DRAFT]
 
-Consider a scenario where there is a large university with 50,000 students and we have the heights of all 50,000 students. The mean height  of all 50,000 students is xx and the variance is yy. The heights of all the university students are illustrated in figure 1A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
+Consider a scenario where there is a large university with 50,000 students and we have the heights of all 50,000 students. The mean height  of all 50,000 students is XX and the variance is YY The heights of all the university students are illustrated in Figure 1A. This figure is shaded with stick figures wearing trousers that remind us this distribution represents people.
 
-Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of n = 25 students and calculated a sample mean.  Then we repeated this sampling process an infinite number of times such that we had a infinite number of sample mean. This **distribution of an infinite number of sample means **is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. The variance of this distribution of sample means reflects that variability in sample means that occurs due to random sampling when the sample size is 25 and the population variance is YY.
+The mean and variance of the population people’s heights is calculated as below (where N = 50,000).
+
+$$
+\begin{aligned} 
+\mu_{people} &= \frac{\sum_{i=1}^{N=50000}{X_i}}{N}\\
+&= XX\\
+\end{aligned} 
+$$
+
+
+$$
+\begin{aligned} 
+\sigma_{people}^2 = \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}\\
+&= YY\\
+\end{aligned} 
+$$
+
+## Random sampling process
+
+Now imagine that we are interested in studying the random sampling process. Specifically we are interested in examining the variability in sample means that occurs when taking random samples of students from the university. Indeed, imagine that we obtained a sample of $n$ = 25 students and calculated a sample mean ($\bar{x}$). Then we repeated this sampling process an infinite number of times such that we have a infinite number of sample means. This set of an **infinite number of sample means** is conceptually illustrated in Figure 1B and we refer to it as the *sampling distribution of the mean*. Moreover, because we sampled from **a single population** the variability in sample means is due only to the **random sampling error** that occurs when the sample size is 25 and the population variance is YY.
+
+[Figure 1A and 1B goes here]
 
 ##Population: What’s in a name
 
 Typically, in psychology, when we use the word population we are referring to a population of people - such as those illustrated in Figure 1A. However, in statistics, a population is simply set of elements (often people) about which we wish to draw conclusions. In this chapter, we shift our focus from thinking of the distribution of people in Figure 1A as a population to also thinking of the distribution of sample mean in Figure 1B as a population.  Doing so may seem counter intuitive but it the logical foundation for Analysis of Variance (ANOVA). 
 
 ### Distribution of sample means as a population
-Thus, in this chapter, we can think of there being a population of people and an imaginary population of sample means (each n = 25). The mean and variance of the population people’s heights is calculated as below (where N = 50,000).
 
-$$
-\begin{aligned} 
-\mu_{people} = \frac{\sum_{i=1}^{N=50000}{X_i}}{N}
-\end{aligned} 
-$$
-
-[plug in show value]
-
-$$
-\begin{aligned} 
-\sigma_{people}^2 = \frac{\sum_{i=1}^{N=50000}{(X_i - \bar{X})^2}}{N}
-\end{aligned} 
-$$
-
-
-But in this chapter, our focus is on the distribution of sample means. The mean of the population sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution). I know it doesn't make sense the divided by infinity per se - in formal mathematics we would write this up in a different way describing things in terms of *expected value*.
+In this chapter, our focus is on the distribution of sample means. The mean of the population sample means is calculated as below. To make things a bit easier to follow we use $A$ instead of $N$ to represent the number of sample means (where $A$ = infinity, because there are an infinite number of sample means in the distribution). I know it doesn't make sense the divided by infinity per se - in formal mathematics we would write this up in a different way describing things in terms of *expected value*.
 
 $$
 \begin{aligned} 
@@ -56,7 +61,7 @@ $$
 \end{aligned} 
 $$
 
-Notice how this is similar to population formula when we are dealing with people we just use $A$ in stead of $N$. When there is only one population this formula will reflect varibiltiy in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that in more in future dchapters.
+Notice how this is similar to population formula when we are dealing with people we just use $A$ instead of $N$. When there is only one population this formula will reflect variability in sample means due to random sampling. When there is more than one population - it becomes more complicated. We’ll discuss that in more in future chapters.
 
 ### CLT Shortcut with variance and sample size
 
@@ -66,13 +71,13 @@ $$
 \end{aligned} 
 $$
 
-This approach is unrealististic because we never know sigma2.
-It’s helpful moving forward to think of this formula as representing the variability due to random sample. No matter the situation - this formula will always reflect the variabilty in sample means due ONLY to random sampling.
+This approach is unrealistic because we never know sigma2.
+It’s helpful moving forward to think of this formula as representing the variability due to random sample. No matter the situation - this formula will always reflect the variability in sample means due ONLY to random sampling.
 
 
 ### Ratio comparison of two approaches
 
-Show ratio is one. When you have all elements of the population these two appraoches will produce **exactly** the same result. Obviously, neither can be used to determine the variance per se with real world data. The fist because can’t use an infinite number of samples and the second because we can’t know the population variance. However, as we see below they both can we useed to **estimate** the variance of the distribution of sampl emeans. 
+Show ratio is one. When you have all elements of the population these two approaches will produce **exactly** the same result. Obviously, neither can be used to determine the variance per se with real world data. The fist because can’t use an infinite number of samples and the second because we can’t know the population variance. However, as we see below they both can we used to **estimate** the variance of the distribution of sample means. 
 
 Show ratio with formulas and numbers
 
@@ -93,9 +98,9 @@ Imagine that we have 3 sample means (each based on n = 25) that we use to estima
 (Formula for variance)
 
 
-Sample 1 : mean and  estiamted populatioin varianc
-Sample 2 : mean and  estiamted populatioin varianc
-Sample 3 : mean and  estiamted populatioin varianc
+Sample 1 : mean and  estimated population variance
+Sample 2 : mean and  estimated population variance
+Sample 3 : mean and  estimated population variance
 
 So our estimate of the variance of distribution of sample means is presented below.
 
@@ -108,18 +113,18 @@ Thus, our estimated variance of the distribution of sample means is the followin
 
 ###CLT Shortcut with estimated variance and sample size
 
-Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut fromula based on central limit theorum. That formula is presented below.
+Recall, than an alternative to calculating the variance of the distribution of sample means is to use the shortcut formula based on central limit theorem. That formula is presented below.
 
 
-The problem with this fomula is that you need to know the variance of the all the people in the population - and we don’t know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into better (or average) estimate of the variance of the people in the population using the formula below. 
+The problem with this formula is that you need to know the variance of the all the people in the population - and we don’t know the variance of all the people in the population. But, we do have three samples from that population of people. Because the three samples are from the same population of people - we know each sample provides an estimate of the same (single) variance of people in the population. Therefore, we can combine those variance estimates into better (or average) estimate of the variance of the people in the population using the formula below. 
 
 
 (Pooling formula)
 
 
-We use different names to refer to the resulting number - we could just call it a better estimate of the poplulation variance. But statisticians also use the names pooled variance of mean squared error for this term. It’s important to know that when the sample sizes are equal it’s the average of the variances... We’ll use the notation s2mse to refer to this estimate of the variance of the people.
+We use different names to refer to the resulting number - we could just call it a better estimate of the population variance. But statisticians also use the names pooled variance of mean squared error for this term. It’s important to know that when the sample sizes are equal it’s the average of the variances... We’ll use the notation s2mse to refer to this estimate of the variance of the people.
 
-Armed with the estimate of the variance of the people in the population we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of smaple means.
+Armed with the estimate of the variance of the people in the population we can use the CLT shortcut formula to obtain an estimate of the variance of the distribution of sample means.
 
 (Show clt shortcut with variance estimate here).
 
@@ -127,7 +132,7 @@ Armed with the estimate of the variance of the people in the population we can u
 
  ### Ratio comparison of two approaches
 
-We revisit the ratio comparison appraoch and see that we are using estimates that the 
+We revisit the ratio comparison approach and see that we are using estimates that the 
 
 But on average it will be one.
 
